# physical-ai-humanoid-textbook

./: .env.example  .env.local  .gitignore  404.html  BACKEND_DEPLOYMENT.md  BACKEND_DEPLOYMENT_NO_DOCKER.md  CONTRIBUTING.md  ChapterPage.html  DEPLOYMENT_GUIDE.md  Dashboard.html  Dockerfile.hf  ENVIRONMENT_VARIABLES.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TEST_PLAN.md  PROJECT_OVERVIEW.md  ProfessionalDevelopment.html  README.hf.md  README.md  SyllabusPage.html  app.py  app_gradio.py  blog.html  create_chapter_metadata.py  demo_multi_provider.py  deploy.sh  deploy_backend.sh  deploy_hf_spaces.sh  docker-compose.yml  index.html  markdown-page.html  nginx.conf  nginx.production.conf  package-lock.json  pyproject.toml  requirements.txt  requirements_hf.txt  run_gradio.py  sitemap.xml  space.yaml  test_analytics.py  (+19 more)
.github/workflows/: ci-cd.yml
.specify/memory/: constitution.md
assets/js/: 01a85c17.b1eee2b8.js  08a50dd1.1a81a19b.js  0e384e19.2ca5e2b1.js  137ee36d.e1f00015.js  (+49 more)
backend/: Dockerfile  alembic.ini  gunicorn.conf.py  start_server.py  vercel.json
backend_env/: pyvenv.cfg
blog/: archive.html  atom.xml  first-blog-post.html  long-blog-post.html  mdx-blog-post.html  rss.xml  tags.html  welcome.html
docs/: intro.html  tags.html
frontend/: docusaurus.config.js  package-lock.json  package.json  sidebars.js  vercel.json
research/: chapter1_introduction_to_physical_ai.md  chapter2_ros2_for_humanoid_robotics.md  chapter3_gazebo_simulation.md  chapter4_nvidia_isaac_sim.md  chapter5_vision_language_action_systems.md  chapter6_humanoid_locomotion.md
(+133 files in other folders)
